syntax = "proto3";

import "rpc.proto";

option go_package = "github.com/sumimakito/raft/pb";

package pb;

service Transport {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
  rpc ApplyLog(ApplyLogRequest) returns (ApplyLogResponse);
}
